#****************************************************************************
# Copyright (C) 2023 pmdtechnologies ag
#
# THIS CODE AND INFORMATION ARE PROVIDED "AS IS" WITHOUT WARRANTY OF ANY
# KIND, EITHER EXPRESSED OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE
# IMPLIED WARRANTIES OF MERCHANTABILITY AND/OR FITNESS FOR A
# PARTICULAR PURPOSE.
#
#****************************************************************************

cmake_minimum_required (VERSION 3.13)

project (pmd_royale_ros VERSION 0.0.1 LANGUAGES CXX)

set (CMAKE_CXX_STANDARD 14)

find_package (ament_cmake REQUIRED)

ament_package ()
