<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pmd_royale_ros</name>
  <version>0.0.1</version>
  <description>metapackage for the ROS2 wrapper supporting pmd TOF cameras</description>
  <maintainer email="info@pmdtec.com">PMD</maintainer>
  <author email="info@pmdtec.com">PMD</author>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>pmd_ros_royale_driver</exec_depend>
  <exec_depend>pmd_ros_royale_examples</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
